working dropdown navbar

--- a/UI.html
+++ b/UI.html
@@ -228,7 +228,7 @@ $(window).load(function() {
    <div id="ttr_content_margin"class="container-fluid">
    <div style="height:0px;width:0px;overflow:hidden;-webkit-margin-top-collapse: separate;"></div>
 
-   <div class="ttr_Services_html_row0 row">
+   <div id="desprinciples" class="ttr_Services_html_row0 row">
    <div class="post_column col-lg-12 col-md-12 col-sm-12 col-xs-12">
    <div class="ttr_Services_html_column00">
    <div style="height:0px;width:0px;overflow:hidden;-webkit-margin-top-collapse: separate;"></div>
@@ -299,7 +299,7 @@ $(window).load(function() {
       <div id="ttr_content">
       <div id="ttr_content_margin"class="container-fluid">
       <div style="height:0px;width:0px;overflow:hidden;-webkit-margin-top-collapse: separate;"></div>
-      <div class="ttr_Services_html_row0 row">
+      <div id="sketches" class="ttr_Services_html_row0 row">
       <div class="post_column col-lg-12 col-md-12 col-sm-12 col-xs-12">
       <div class="ttr_Services_html_column00">
       <div style="height:0px;width:0px;overflow:hidden;-webkit-margin-top-collapse: separate;"></div>
@@ -413,7 +413,7 @@ $(window).load(function() {
          <div id="ttr_content">
          <div id="ttr_content_margin"class="container-fluid">
          <div style="height:0px;width:0px;overflow:hidden;-webkit-margin-top-collapse: separate;"></div>
-         <div class="ttr_Services_html_row0 row">
+         <div id="prototype" class="ttr_Services_html_row0 row">
          <div class="post_column col-lg-12 col-md-12 col-sm-12 col-xs-12">
          <div class="ttr_Services_html_column00">
          <div style="height:0px;width:0px;overflow:hidden;-webkit-margin-top-collapse: separate;"></div>
