--- a/appendix.html
+++ b/appendix.html
@@ -285,7 +285,29 @@ $(window).load(function() {
   </div>
 </div>
 
-<div class="threecolumndiv">
+
+<div class="fourcolumndiv">
+  <div class="row">
+    <div class="fourcolumn">
+      <div class="html_content"><a href="license.html" class="appendixbutton"><p style="margin:0.14em 0em 0em 0em;text-align:Center;"><span class="ttr_image" style="float:none;display:block;text-align:center;overflow:hidden;margin:0em 0em 0em 0em;"><span><img class="ttr_uniform" src="images/legal.png" style="max-width:64px;max-height:64px;" /></span></span><br style="font-family:'Open Sans','Arial';font-weight:700;font-size:1.429em;color:rgba(78,78,78,1);" /></p><p style="margin:0.14em 0em 0em 0em;text-align:Center;"><span style="font-family:'Roboto','Arial';font-size:1.429em;color:rgba(78,78,78,1);">Legal Statement</span></p></a></div>
+ 
+    </div>
+    <div class="fourcolumn">
+      <div class="html_content"><a href="EULA.html" class="appendixbutton"><p style="margin:0.14em 0em 0em 0em;text-align:Center;"><span class="ttr_image" style="float:none;display:block;text-align:center;overflow:hidden;margin:0em 0em 0em 0em;"><span><img class="ttr_uniform" src="images/handshake.png" style="max-width:64px;max-height:64px;" /></span></span><br style="font-family:'Open Sans','Arial';font-weight:700;font-size:1.429em;color:rgba(78,78,78,1);" /></p><p style="margin:0.14em 0em 0em 0em;text-align:Center;"><span style="font-family:'Roboto','Arial';font-size:1.429em;color:rgba(78,78,78,1);">EULA</span></p></a></div>
+
+    </div>
+    <div class="fourcolumn">
+      <div class="html_content"><a href="license.html" class="appendixbutton"><p style="margin:0.14em 0em 0em 0em;text-align:Center;"><span class="ttr_image" style="float:none;display:block;text-align:center;overflow:hidden;margin:0em 0em 0em 0em;"><span><img class="ttr_uniform" src="images/license.png" style="max-width:64px;max-height:64px;" /></span></span><br style="font-family:'Open Sans','Arial';font-weight:700;font-size:1.429em;color:rgba(78,78,78,1);" /></p><p style="margin:0.14em 0em 0em 0em;text-align:Center;"><span style="font-family:'Roboto','Arial';font-size:1.429em;color:rgba(78,78,78,1);">CC License</span></p></a></div>
+    </div>
+    <div class="fourcolumn">
+      <div class="html_content"><a href="license.html" class="appendixbutton"><p style="margin:0.14em 0em 0em 0em;text-align:Center;"><span class="ttr_image" style="float:none;display:block;text-align:center;overflow:hidden;margin:0em 0em 0em 0em;"><span><img class="ttr_uniform" src="images/data-protection.png" style="max-width:64px;max-height:64px;" /></span></span><br style="font-family:'Open Sans','Arial';font-weight:700;font-size:1.429em;color:rgba(78,78,78,1);" /></p><p style="margin:0.14em 0em 0em 0em;text-align:Center;"><span style="font-family:'Roboto','Arial';font-size:1.429em;color:rgba(78,78,78,1);">IP & GDPR</span></p></a></div>
+ 
+    </div>
+
+  </div>
+</div>
+
+<!-- <div class="threecolumndiv">
   <div class="row">
     <div class="threecolumn">
       <div class="html_content"><a href="EULA.html" class="appendixbutton"><p style="margin:0.14em 0em 0em 0em;text-align:Center;"><span class="ttr_image" style="float:none;display:block;text-align:center;overflow:hidden;margin:0em 0em 0em 0em;"><span><img class="ttr_uniform" src="images/handshake.png" style="max-width:64px;max-height:64px;" /></span></span><br style="font-family:'Open Sans','Arial';font-weight:700;font-size:1.429em;color:rgba(78,78,78,1);" /></p><p style="margin:0.14em 0em 0em 0em;text-align:Center;"><span style="font-family:'Roboto','Arial';font-size:1.429em;color:rgba(78,78,78,1);">EULA</span></p></a></div>
@@ -299,7 +321,7 @@ $(window).load(function() {
  
     </div>
   </div>
-</div>
+</div> -->
 
 
 
