--- a/index.html
+++ b/index.html
@@ -88,34 +88,49 @@ $(window).load(function() {
   display: inline-block;
 }
 
-/* Dropdown Content (Hidden by Default) */
 .dropdown-content {
   display: none;
   position: absolute;
   background-color: #f9f9f9;
+  color: #004949;;
   min-width: 200px;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   z-index: 1;
 }
 
+
 /* Links inside the dropdown */
-.dropdown-content a {
-  color: black;
+.dropdown-content a:visited, a:link {
+  color: #004949;
   padding: 12px 16px;
-  text-decoration: none;
+  /* text-decoration: none; */
   display: block;
+  transition: all 300ms ease;
+  -moz-transition: all 300ms ease;
+  -webkit-transition: all 300ms ease;
+  -ms-transition: all 300ms ease;
+  -o-transition: all 300ms ease;
 }
 
 /* Change color of dropdown links on hover */
-.dropdown-content a:hover {background-color: #f1f1f1}
+.dropdown-content a:hover {
+  background-color: #004949;
+  color: white;
+  
+}
 
 /* Show the dropdown menu on hover */
 .dropdown:hover .dropdown-content {
   display: block;
   transition:
-  0.2s border-top-width ease-in,
+  0.2s 0.2s border-top ease-out,
     0.3s border-top-color;
 }
+
+/* .dropdown-content:after {
+  display: block;
+  transition: 0.2s border-bottom ease-in;
+} */
 
 /* Change the background color of the dropdown button when the dropdown content is shown */
 .dropdown:hover .dropbtn {
@@ -130,10 +145,10 @@ $(window).load(function() {
         <hr class ="horiz_separator"/>
       </li>
     <div class="dropdown-content">
-      <a href="#abstract">Abstract</a>
-      <a href="#video">Project Video</a>
-      <a href="#timeline">Project Timeline</a>
-      <a href="#team">Team Members</a>  
+      <a href="index.html#abstract">Abstract</a>
+      <a href="index.html#video">Project Video</a>
+      <a href="index.html#timeline">Project Timeline</a>
+      <a href="index.html#team">Team Members</a>  
     </div>
     </div>
     <div class="dropdown">
@@ -141,13 +156,13 @@ $(window).load(function() {
          <hr class ="horiz_separator"/>
       </li>
       <div class="dropdown-content">
-        <a href="#abstract">Project Background</a>
-        <a href="#abstract">Client Requirements</a>
-        <a href="#abstract">Project Goal</a>
-        <a href="#abstract">User Interviews</a>  
-        <a href="#abstract">User Personas</a>
-        <a href="#abstract">Use Cases</a>
-        <a href="#abstract">MoSCoW List</a>  
+        <a href="requirements.html#projback">Project Background</a>
+        <a href="requirements.html#clientrequirements">Client Requirements</a>
+        <a href="requirements.html#projectgoal">Project Goal</a>
+        <a href="requirements.html#UserInt">User Interviews</a>  
+        <a href="requirements.html#personas">User Personas</a>
+        <a href="requirements.html#usecase">Use Cases</a>
+        <a href="requirements.html#MoSCoW">MoSCoW List</a>  
     </div>
     </div>
   <div class="dropdown">
@@ -155,9 +170,9 @@ $(window).load(function() {
          <hr class ="horiz_separator"/>
       </li>
       <div class="dropdown-content">
-        <a href="#abstract">Design Principles</a>
-        <a href="#abstract">Sketches</a>
-        <a href="#abstract">Prototypes</a>  
+        <a href="UI.html#desprinciples">Design Principles</a>
+        <a href="UI.html#sketches">Sketches</a>
+        <a href="UI.html#prototype">Prototypes</a>  
     </div>
     </div>
     <div class="dropdown">
@@ -165,10 +180,9 @@ $(window).load(function() {
         <hr class ="horiz_separator"/>
      </li>
      <div class="dropdown-content">
-      <a href="#abstract">Abstract</a>
-      <a href="#abstract">Project Video</a>
-      <a href="#abstract">Project Timeline</a>
-      <a href="#abstract">Team Members</a>  
+      <a href="research.html#projectresearch">Project Research</a>
+      <a href="research.html#techresearch">Technical Research</a>
+      <a href="research.html#techdec">Technical Decisions</a> 
   </div>
     </div>
      <div class="dropdown">
@@ -209,10 +223,11 @@ $(window).load(function() {
       <hr class ="horiz_separator"/>
       </li>
       <div class="dropdown-content">
-        <a href="#abstract">Abstract</a>
-        <a href="#abstract">Project Video</a>
-        <a href="#abstract">Project Timeline</a>
-        <a href="#abstract">Team Members</a>  
+        <a href="evaluation.html#moscoweval">MoSCoW Evaluation</a>
+        <a href="evaluation.html#buglist">Bug List</a>
+        <a href="evaluation.html#indivcontrib">Individual Contribution</a>
+        <a href="evaluation.html#criteval">Critical Evaluation</a>
+        <a href="evaluation.html#futurework">Future Work</a>  
     </div>
     </div>
       <!-- <li class="ttr_menu_items_parent dropdown"><a href="services.html" class="ttr_menu_items_parent_link"><span class="menuchildicon"></span>Services</a>
@@ -222,12 +237,6 @@ $(window).load(function() {
       <li class="ttr_menu_items_parent dropdown"><a href="appendix.html" class="ttr_menu_items_parent_link"><span class="menuchildicon"></span>Appendix</a>
       <hr class ="horiz_separator"/>
       </li>
-      <div class="dropdown-content">
-        <a href="#abstract">Abstract</a>
-        <a href="#abstract">Project Video</a>
-        <a href="#abstract">Project Timeline</a>
-        <a href="#abstract">Team Members</a>  
-    </div>
     </div>
       <!-- <li class="ttr_menu_items_parent dropdown"><a href="contact.html" class="ttr_menu_items_parent_link"><span class="menuchildicon"></span>Contact</a>
       <hr class ="horiz_separator"/>
