--- a/appendix.html
+++ b/appendix.html
@@ -78,7 +78,7 @@ $(window).load(function() {
       <li class="ttr_menu_items_parent dropdown"><a href="requirements.html" class="ttr_menu_items_parent_link"><span class="menuchildicon"></span>Reqs.</a>
          <hr class ="horiz_separator"/>
       </li>
-      <li class="ttr_menu_items_parent dropdown"><a href="UI.html" class="ttr_menu_items_parent_link"><span class="menuchildicon"></span>HCI</a>
+      <li class="ttr_menu_items_parent dropdown"><a href="UI.html" class="ttr_menu_items_parent_link"><span class="menuchildicon"></span>UI Design</a>
          <hr class ="horiz_separator"/>
       </li>
       <li class="ttr_menu_items_parent dropdown"><a href="research.html" class="ttr_menu_items_parent_link"><span class="menuchildicon"></span>Research</a>
@@ -257,7 +257,7 @@ $(window).load(function() {
   display: table;
   clear: both;
 }  
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 1000px) {
   .threecolumn,
   .fourcolumn {
     width: 100%;
@@ -275,7 +275,7 @@ $(window).load(function() {
       <div class="html_content"><a href="blog.html" class="appendixbutton"><p style="margin:0.14em 0em 0em 0em;text-align:Center;"><span class="ttr_image" style="float:none;display:block;text-align:center;overflow:hidden;margin:0em 0em 0em 0em;"><span><img class="ttr_uniform" src="images/launch.png" style="max-width:64px;max-height:64px;" /></span></span><br style="font-family:'Open Sans','Arial';font-weight:700;font-size:1.429em;color:rgba(78,78,78,1);" /></p><p style="margin:0.14em 0em 0em 0em;text-align:Center;"><span style="font-family:'Roboto','Arial';font-size:1.429em;color:rgba(78,78,78,1);">Deployment Manual</span></p></a></div>
     </div>
     <div class="fourcolumn">
-      <div class="html_content"><a href="https://wordpress.com/page/pridar.wordpress.com/6" class="appendixbutton" target="_blank"><p style="margin:0.14em 0em 0em 0em;text-align:Center;"><span class="ttr_image" style="float:none;display:block;text-align:center;overflow:hidden;margin:0em 0em 0em 0em;"><span><img class="ttr_uniform" src="images/wordpress.png" style="max-width:64px;max-height:64px;" /></span></span><br style="font-family:'Open Sans','Arial';font-weight:700;font-size:1.429em;color:rgba(78,78,78,1);" /></p><p style="margin:0.14em 0em 0em 0em;text-align:Center;"><span style="font-family:'Roboto','Arial';font-size:1.429em;color:rgba(78,78,78,1);">Development Blog</span></p></a></div>
+      <div class="html_content"><a href="https://pridar.wordpress.com/" class="appendixbutton" target="_blank"><p style="margin:0.14em 0em 0em 0em;text-align:Center;"><span class="ttr_image" style="float:none;display:block;text-align:center;overflow:hidden;margin:0em 0em 0em 0em;"><span><img class="ttr_uniform" src="images/wordpress.png" style="max-width:64px;max-height:64px;" /></span></span><br style="font-family:'Open Sans','Arial';font-weight:700;font-size:1.429em;color:rgba(78,78,78,1);" /></p><p style="margin:0.14em 0em 0em 0em;text-align:Center;"><span style="font-family:'Roboto','Arial';font-size:1.429em;color:rgba(78,78,78,1);">Development Blog</span></p></a></div>
 
     </div>
     <div class="fourcolumn">
@@ -300,7 +300,7 @@ $(window).load(function() {
       <div class="html_content"><a href="license.html" class="appendixbutton"><p style="margin:0.14em 0em 0em 0em;text-align:Center;"><span class="ttr_image" style="float:none;display:block;text-align:center;overflow:hidden;margin:0em 0em 0em 0em;"><span><img class="ttr_uniform" src="images/license.png" style="max-width:64px;max-height:64px;" /></span></span><br style="font-family:'Open Sans','Arial';font-weight:700;font-size:1.429em;color:rgba(78,78,78,1);" /></p><p style="margin:0.14em 0em 0em 0em;text-align:Center;"><span style="font-family:'Roboto','Arial';font-size:1.429em;color:rgba(78,78,78,1);">CC License</span></p></a></div>
     </div>
     <div class="fourcolumn">
-      <div class="html_content"><a href="license.html" class="appendixbutton"><p style="margin:0.14em 0em 0em 0em;text-align:Center;"><span class="ttr_image" style="float:none;display:block;text-align:center;overflow:hidden;margin:0em 0em 0em 0em;"><span><img class="ttr_uniform" src="images/data-protection.png" style="max-width:64px;max-height:64px;" /></span></span><br style="font-family:'Open Sans','Arial';font-weight:700;font-size:1.429em;color:rgba(78,78,78,1);" /></p><p style="margin:0.14em 0em 0em 0em;text-align:Center;"><span style="font-family:'Roboto','Arial';font-size:1.429em;color:rgba(78,78,78,1);">IP & GDPR</span></p></a></div>
+      <div class="html_content"><a href="docs/GDPRStatement.pdf" class="appendixbutton"><p style="margin:0.14em 0em 0em 0em;text-align:Center;"><span class="ttr_image" style="float:none;display:block;text-align:center;overflow:hidden;margin:0em 0em 0em 0em;"><span><img class="ttr_uniform" src="images/data-protection.png" style="max-width:64px;max-height:64px;" /></span></span><br style="font-family:'Open Sans','Arial';font-weight:700;font-size:1.429em;color:rgba(78,78,78,1);" /></p><p style="margin:0.14em 0em 0em 0em;text-align:Center;"><span style="font-family:'Roboto','Arial';font-size:1.429em;color:rgba(78,78,78,1);">IP & GDPR</span></p></a></div>
  
     </div>
 
@@ -384,7 +384,7 @@ $(window).load(function() {
           <div class="column">
         <p><a href="index.html"><img class="footerIcons" src="images/home.png"><span style="font-family:'Open Sans','Arial';font-size:1.071em;color:rgb(253, 252, 252);"> Home</span> </a></p>
         <p><a href="requirements.html"><img class="footerIcons" src="images/req.png"><span style="font-family:'Open Sans','Arial';font-size:1.071em;color:rgb(253, 252, 252);"> Requirements</span> </a></p>
-        <p><a href="UI.html"><img class="footerIcons" src="images/hci.png"><span style="font-family:'Open Sans','Arial';font-size:1.071em;color:rgb(253, 252, 252);"> HCI</span></a></p>
+        <p><a href="UI.html"><img class="footerIcons" src="images/hci.png"><span style="font-family:'Open Sans','Arial';font-size:1.071em;color:rgb(253, 252, 252);"> UI Design</span></a></p>
         <p><a href="research.html"><img class="footerIcons" src="images/res.png"><span style="font-family:'Open Sans','Arial';font-size:1.071em;color:rgb(253, 252, 252);"> Research</span></a></p>
         <p><a href="design.html"><img class="footerIcons" src="images/design.png"><span style="font-family:'Open Sans','Arial';font-size:1.071em;color:rgb(253, 252, 252);"> Design</span></a></p>
         </div>
