--- a/evaluation.html
+++ b/evaluation.html
@@ -166,7 +166,31 @@ th, td {
    
    <tr style="text-align: center;">
       <td>1</td>
-      <td>Simple chatbot feature</td>
+      <td>Chatbot provides resources about the PRIDAR requirements</td>
+      <td>MUST</td>
+      <td>&#10004</td>
+      <td>Adel</td>
+   </tr>
+
+   <tr style="text-align: center;">
+      <td>2</td>
+      <td>User can have their own questions answered about the PRIDAR standard</td>
+      <td>MUST</td>
+      <td>&#10004</td>
+      <td>Adel</td>
+   </tr>
+
+   <tr style="text-align: center;">
+      <td>3</td>
+      <td>Adherence to the EU GDPR</td>
+      <td>MUST</td>
+      <td>&#10004</td>
+      <td>Adel</td>
+   </tr>
+
+   <tr style="text-align: center;">
+      <td>4</td>
+      <td>User can have their own questions answered about the PRIDAR standard</td>
       <td>MUST</td>
       <td>&#10004</td>
       <td>Adel</td>
