--- a/research.html
+++ b/research.html
@@ -231,7 +231,7 @@ $(window).load(function() {
                </span></p>
             <p class="contentstyle"><span style="font-family:'Open Sans','Arial';font-size:1.4em;color:rgba(78,78,78,1);">Especially when implemented badly, this can become painfully noticeable to users and make the experience feel rigid, inflexible, and by extension sometimes unhelpful.
                 </span></p>
-            <p class="contentstyle"><span style="font-family:'Open Sans','Arial';font-size:1.4em;color:rgba(78,78,78,1);">NLP technologies can to some degree solve this, however due to our inexperience with the field of AI, and limited time, we decided upon a traditional chatbot solution for the PRIDAR chatbot.
+            <p class="contentstyle"><span style="font-family:'Open Sans','Arial';font-size:1.4em;color:rgba(78,78,78,1);">NLP(Natural Language Processing) technologies can to some degree solve this, however due to our inexperience with the field of AI, and limited time, we decided upon a traditional chatbot solution for the PRIDAR chatbot.
             </span></p>
             <p class="contentstyle"><span style="font-family:'Open Sans','Arial';font-size:1.4em;color:rgba(78,78,78,1);">Our hope is that its features can prove useful enough, and provide enough options for flexibility to the user, that the experience doesn’t feel as rigid or unhelpful as traditional chatbots tend to be all too often.
                </span></p>
