--- a/appendix.html
+++ b/appendix.html
@@ -18,10 +18,7 @@ PRIDAR | Appendix
 </title>
 <link rel="stylesheet"  href="bootstrap.css" type="text/css" media="screen"/>
 <link rel="stylesheet"  href="style.css" type="text/css" media="screen"/>
-<!--[if lte IE 8]>
-<link rel="stylesheet"  href="menuie.css" type="text/css" media="screen"/>
-<link rel="stylesheet"  href="vmenuie.css" type="text/css" media="screen"/>
-<![endif]-->
+
 <script type="text/javascript" src="totop.js">
 </script>
 <!--[if IE 7]>
@@ -84,7 +81,7 @@ $(window).load(function() {
       <li class="ttr_menu_items_parent dropdown"><a href="research.html" class="ttr_menu_items_parent_link"><span class="menuchildicon"></span>Research</a>
         <hr class ="horiz_separator"/>
      </li>
-      <li class="ttr_menu_items_parent dropdown"><a href="design.html" class="ttr_menu_items_parent_link"><span class="menuchildicon"></span>Design</a>
+      <li class="ttr_menu_items_parent dropdown"><a href="design.html" class="ttr_menu_items_parent_link"><span class="menuchildicon"></span>Sys. Design</a>
          <hr class ="horiz_separator"/>
       </li>
       <li class="ttr_menu_items_parent dropdown"><a href="implementation.html" class="ttr_menu_items_parent_link"><span class="menuchildicon"></span>Impl.</a>
@@ -96,15 +93,9 @@ $(window).load(function() {
       <li class="ttr_menu_items_parent dropdown"><a href="evaluation.html" class="ttr_menu_items_parent_link"><span class="menuchildicon"></span>Eval.</a>
       <hr class ="horiz_separator"/>
       </li>
-      <!-- <li class="ttr_menu_items_parent dropdown"><a href="services.html" class="ttr_menu_items_parent_link"><span class="menuchildicon"></span>Services</a>
-      <hr class ="horiz_separator"/>
-      </li> -->
       <li class="ttr_menu_items_parent dropdown"><a href="appendix.html" class="ttr_menu_items_parent_link"><span class="menuchildicon"></span>Appendix</a>
       <hr class ="horiz_separator"/>
       </li>
-      <!-- <li class="ttr_menu_items_parent dropdown"><a href="contact.html" class="ttr_menu_items_parent_link"><span class="menuchildicon"></span>Contact</a>
-      <hr class ="horiz_separator"/>
-      </li> -->
       </ul>
 </div>
 </div>
@@ -131,84 +122,8 @@ $(window).load(function() {
 <div class="post_column col-lg-12 col-md-12 col-sm-12 col-xs-12">
 <div class="ttr_Services_html_column00">
 <div class="html_content"><p class="text" style="margin:0em 0em 0em 0em;text-align:Center;line-height:0.0704225352112676;font-size:1.143em;"><span style="font-family:'Roboto','Arial';font-size:2.143em;color:rgba(52,52,52,1);">Documents and Manuals</span></p><p class="text" style="margin:0em 0em 0.48em 0em;text-align:Center;font-size:1.143em;"><br style="font-family:'Roboto','Arial';font-size:2.143em;color:rgba(52,52,52,1);" /><span style="font-family:'Open Sans','Arial';font-size:1.071em;color:rgba(78,78,78,1);">__________________________________________________________</span></p></div>
-
 </div>
 </div>
-<!-- <div class="ttr_Services_html_row1 row">
-<div class="post_column col-lg-4 col-md-6 col-sm-6 col-xs-12">
-<div class="ttr_Services_html_column10">
-<div style="height:0px;width:0px;overflow:hidden;-webkit-margin-top-collapse: separate;"></div>
-<div class="html_content"><a href="blog.html" class="appendixbutton"><p style="margin:0.14em 0em 0em 0em;text-align:Center;"><span class="ttr_image" style="float:none;display:block;text-align:center;overflow:hidden;margin:0em 0em 0em 0em;"><span><img class="ttr_uniform" src="images/user-manual.png" style="max-width:64px;max-height:64px;" /></span></span><br style="font-family:'Open Sans','Arial';font-weight:700;font-size:1.429em;color:rgba(78,78,78,1);" /></p><p style="margin:0.14em 0em 0em 0em;text-align:Center;"><span style="font-family:'Roboto','Arial';font-size:1.429em;color:rgba(78,78,78,1);">User Manual</span></p></a></div>
-<div style="height:0px;width:0px;overflow:hidden;-webkit-margin-top-collapse: separate;"></div>
-<div style="clear:both;"></div>
-</div>
-</div>
-<div class="clearfix visible-sm-block visible-md-block visible-xs-block">
-</div>
-<div class="post_column col-lg-4 col-md-6 col-sm-6 col-xs-12">
-<div class="ttr_Services_html_column11">
-<div style="height:0px;width:0px;overflow:hidden;-webkit-margin-top-collapse: separate;"></div>
-<div class="html_content"><a href="blog.html" class="appendixbutton"><p style="margin:0.14em 0em 0em 0em;text-align:Center;"><span class="ttr_image" style="float:none;display:block;text-align:center;overflow:hidden;margin:0em 0em 0em 0em;"><span><img class="ttr_uniform" src="images/launch.png" style="max-width:64px;max-height:64px;" /></span></span><br style="font-family:'Open Sans','Arial';font-weight:700;font-size:1.429em;color:rgba(78,78,78,1);" /></p><p style="margin:0.14em 0em 0em 0em;text-align:Center;"><span style="font-family:'Roboto','Arial';font-size:1.429em;color:rgba(78,78,78,1);">Deployment Manual</span></p></a></div>
-<div style="height:0px;width:0px;overflow:hidden;-webkit-margin-top-collapse: separate;"></div>
-<div style="clear:both;"></div>
-</div>
-</div>
-<div class="clearfix visible-xs-block">
-</div>
-<div class="post_column col-lg-4 col-md-6 col-sm-6 col-xs-12">
-<div class="ttr_Services_html_column12">
-<div style="height:0px;width:0px;overflow:hidden;-webkit-margin-top-collapse: separate;"></div>
-<div class="html_content"><a href="https://wordpress.com/page/pridar.wordpress.com/6" class="appendixbutton" target="_blank"><p style="margin:0.14em 0em 0em 0em;text-align:Center;"><span class="ttr_image" style="float:none;display:block;text-align:center;overflow:hidden;margin:0em 0em 0em 0em;"><span><img class="ttr_uniform" src="images/wordpress.png" style="max-width:64px;max-height:64px;" /></span></span><br style="font-family:'Open Sans','Arial';font-weight:700;font-size:1.429em;color:rgba(78,78,78,1);" /></p><p style="margin:0.14em 0em 0em 0em;text-align:Center;"><span style="font-family:'Roboto','Arial';font-size:1.429em;color:rgba(78,78,78,1);">Development Blog</span></p></a></div>
-<div style="height:0px;width:0px;overflow:hidden;-webkit-margin-top-collapse: separate;"></div>
-<div style="clear:both;"></div>
-</div>
-</div>
-
-<div class="clearfix visible-lg-block visible-xs-block">
-</div>
-<div class="post_column col-lg-4 col-md-6 col-sm-6 col-xs-12">
-<div class="ttr_Services_html_column13">
-<div style="height:0px;width:0px;overflow:hidden;-webkit-margin-top-collapse: separate;"></div>
-<div class="html_content"><a href="MonthlyVideos.html" class="appendixbutton" target="_blank"><p style="margin:0.14em 0em 0em 0em;text-align:Center;"><span class="ttr_image" style="float:none;display:block;text-align:center;overflow:hidden;margin:0em 0em 0em 0em;"><span><img class="ttr_uniform" src="images/videoicon.png" style="max-width:64px;max-height:64px;" /></span></span><br style="font-family:'Open Sans','Arial';font-weight:700;font-size:1.429em;color:rgba(78,78,78,1);" /></p><p style="margin:0.14em 0em 0em 0em;text-align:Center;"><span style="font-family:'Roboto','Arial';font-size:1.429em;color:rgba(78,78,78,1);">Monthly Videos</span></p></a></div>
-<div style="height:0px;width:0px;overflow:hidden;-webkit-margin-top-collapse: separate;"></div>
-<div style="clear:both;"></div>
-</div>
-</div>
-<div class="clearfix visible-sm-block visible-md-block visible-xs-block">
-</div>
-<div class="post_column col-lg-4 col-md-6 col-sm-6 col-xs-12">
-<div class="ttr_Services_html_column14">
-<div style="height:0px;width:0px;overflow:hidden;-webkit-margin-top-collapse: separate;"></div>
-<div class="html_content"><a href="EULA.html" class="appendixbutton"><p style="margin:0.14em 0em 0em 0em;text-align:Center;"><span class="ttr_image" style="float:none;display:block;text-align:center;overflow:hidden;margin:0em 0em 0em 0em;"><span><img class="ttr_uniform" src="images/handshake.png" style="max-width:64px;max-height:64px;" /></span></span><br style="font-family:'Open Sans','Arial';font-weight:700;font-size:1.429em;color:rgba(78,78,78,1);" /></p><p style="margin:0.14em 0em 0em 0em;text-align:Center;"><span style="font-family:'Roboto','Arial';font-size:1.429em;color:rgba(78,78,78,1);">EULA</span></p></a></div>
-<div style="height:0px;width:0px;overflow:hidden;-webkit-margin-top-collapse: separate;"></div>
-<div style="clear:both;"></div>
-</div>
-</div>
-<div class="clearfix visible-xs-block">
-</div>
-<div class="post_column col-lg-4 col-md-6 col-sm-6 col-xs-12">
-<div class="ttr_Services_html_column15">
-<div style="height:0px;width:0px;overflow:hidden;-webkit-margin-top-collapse: separate;"></div>
-<div class="html_content"><a href="license.html" class="appendixbutton"><p style="margin:0.14em 0em 0em 0em;text-align:Center;"><span class="ttr_image" style="float:none;display:block;text-align:center;overflow:hidden;margin:0em 0em 0em 0em;"><span><img class="ttr_uniform" src="images/license.png" style="max-width:64px;max-height:64px;" /></span></span><br style="font-family:'Open Sans','Arial';font-weight:700;font-size:1.429em;color:rgba(78,78,78,1);" /></p><p style="margin:0.14em 0em 0em 0em;text-align:Center;"><span style="font-family:'Roboto','Arial';font-size:1.429em;color:rgba(78,78,78,1);">CC License</span></p></a></div>
-<div style="height:0px;width:0px;overflow:hidden;-webkit-margin-top-collapse: separate;"></div>
-<div style="clear:both;"></div>
-</div>
-</div>
-<div class="clearfix visible-lg-block visible-sm-block visible-md-block visible-xs-block">
-</div>
-<div style="height:0px;width:0px;overflow:hidden;-webkit-margin-top-collapse: separate;"></div>
-
-<div class="post_column col-lg-4 col-md-6 col-sm-6 col-xs-12">
-  <div class="ttr_Services_html_column16">
-  <div style="height:0px;width:0px;overflow:hidden;-webkit-margin-top-collapse: separate;"></div>
-  <div class="html_content"><a href="license.html" class="appendixbutton"><p style="margin:0.14em 0em 0em 0em;text-align:Center;"><span class="ttr_image" style="float:none;display:block;text-align:center;overflow:hidden;margin:0em 0em 0em 0em;"><span><img class="ttr_uniform" src="images/data-protection.png" style="max-width:64px;max-height:64px;" /></span></span><br style="font-family:'Open Sans','Arial';font-weight:700;font-size:1.429em;color:rgba(78,78,78,1);" /></p><p style="margin:0.14em 0em 0em 0em;text-align:Center;"><span style="font-family:'Roboto','Arial';font-size:1.429em;color:rgba(78,78,78,1);">IP & GDPR</span></p></a></div>
-  <div style="height:0px;width:0px;overflow:hidden;-webkit-margin-top-collapse: separate;"></div>
-  <div style="clear:both;"></div>
-  </div>
-  </div>
-  <div class="clearfix visible-lg-block visible-sm-block visible-md-block visible-xs-block">
-  </div>
-</div> -->
 </div>
 </div>
 <div style="clear:both">
@@ -216,13 +131,6 @@ $(window).load(function() {
 </div>
 </div>
 </div>
-
-
-
-
-
-
-
 
 
 <style>
@@ -238,20 +146,7 @@ $(window).load(function() {
     width: 25%;
     padding: 20px;
   }  
-  .threecolumndiv {
-    width:80%;
-    margin:auto;
-    display: flex;
-    align-items: center;
-    padding-left: 100px;
-    padding-right: 100px;
-  }
-  .threecolumn{
-    align-self: center;
-    float: left;
-    width: 33%;
-    padding: 20px;
-  }  
+
   .row:after {
   content: "";
   display: table;
@@ -289,7 +184,7 @@ $(window).load(function() {
 <div class="fourcolumndiv">
   <div class="row">
     <div class="fourcolumn">
-      <div class="html_content"><a href="license.html" class="appendixbutton"><p style="margin:0.14em 0em 0em 0em;text-align:Center;"><span class="ttr_image" style="float:none;display:block;text-align:center;overflow:hidden;margin:0em 0em 0em 0em;"><span><img class="ttr_uniform" src="images/legal.png" style="max-width:64px;max-height:64px;" /></span></span><br style="font-family:'Open Sans','Arial';font-weight:700;font-size:1.429em;color:rgba(78,78,78,1);" /></p><p style="margin:0.14em 0em 0em 0em;text-align:Center;"><span style="font-family:'Roboto','Arial';font-size:1.429em;color:rgba(78,78,78,1);">Legal Statement</span></p></a></div>
+      <div class="html_content"><a href="docs/LegalStatement.pdf" class="appendixbutton"><p style="margin:0.14em 0em 0em 0em;text-align:Center;"><span class="ttr_image" style="float:none;display:block;text-align:center;overflow:hidden;margin:0em 0em 0em 0em;"><span><img class="ttr_uniform" src="images/legal.png" style="max-width:64px;max-height:64px;" /></span></span><br style="font-family:'Open Sans','Arial';font-weight:700;font-size:1.429em;color:rgba(78,78,78,1);" /></p><p style="margin:0.14em 0em 0em 0em;text-align:Center;"><span style="font-family:'Roboto','Arial';font-size:1.429em;color:rgba(78,78,78,1);">Legal Statement</span></p></a></div>
  
     </div>
     <div class="fourcolumn">
@@ -307,23 +202,6 @@ $(window).load(function() {
   </div>
 </div>
 
-<!-- <div class="threecolumndiv">
-  <div class="row">
-    <div class="threecolumn">
-      <div class="html_content"><a href="EULA.html" class="appendixbutton"><p style="margin:0.14em 0em 0em 0em;text-align:Center;"><span class="ttr_image" style="float:none;display:block;text-align:center;overflow:hidden;margin:0em 0em 0em 0em;"><span><img class="ttr_uniform" src="images/handshake.png" style="max-width:64px;max-height:64px;" /></span></span><br style="font-family:'Open Sans','Arial';font-weight:700;font-size:1.429em;color:rgba(78,78,78,1);" /></p><p style="margin:0.14em 0em 0em 0em;text-align:Center;"><span style="font-family:'Roboto','Arial';font-size:1.429em;color:rgba(78,78,78,1);">EULA</span></p></a></div>
-
-    </div>
-    <div class="threecolumn">
-      <div class="html_content"><a href="license.html" class="appendixbutton"><p style="margin:0.14em 0em 0em 0em;text-align:Center;"><span class="ttr_image" style="float:none;display:block;text-align:center;overflow:hidden;margin:0em 0em 0em 0em;"><span><img class="ttr_uniform" src="images/license.png" style="max-width:64px;max-height:64px;" /></span></span><br style="font-family:'Open Sans','Arial';font-weight:700;font-size:1.429em;color:rgba(78,78,78,1);" /></p><p style="margin:0.14em 0em 0em 0em;text-align:Center;"><span style="font-family:'Roboto','Arial';font-size:1.429em;color:rgba(78,78,78,1);">CC License</span></p></a></div>
-    </div>
-    <div class="threecolumn">
-      <div class="html_content"><a href="license.html" class="appendixbutton"><p style="margin:0.14em 0em 0em 0em;text-align:Center;"><span class="ttr_image" style="float:none;display:block;text-align:center;overflow:hidden;margin:0em 0em 0em 0em;"><span><img class="ttr_uniform" src="images/data-protection.png" style="max-width:64px;max-height:64px;" /></span></span><br style="font-family:'Open Sans','Arial';font-weight:700;font-size:1.429em;color:rgba(78,78,78,1);" /></p><p style="margin:0.14em 0em 0em 0em;text-align:Center;"><span style="font-family:'Roboto','Arial';font-size:1.429em;color:rgba(78,78,78,1);">IP & GDPR</span></p></a></div>
- 
-    </div>
-  </div>
-</div> -->
-
-
 
 
 <div style="height:0px;width:0px;overflow:hidden;"></div>
@@ -336,12 +214,6 @@ $(window).load(function() {
   <div class="footercellcolumn1">
   <div class="html_content"><h4 style="margin:16px 0px 0px 0px;line-height:2.02em;"><span style="font-weight:900;font-size:1.158em;color:rgba(243,243,243,1);">Site Info</span></h4>
     <p style="line-height:1.93em;"><span style="font-family:'Open Sans','Arial';font-size:1.071em;color:rgb(253, 252, 252);">This is the website for UCL Year2 2021-2022 COMP0016 Team-10: PRIDAR, which introduces the team project and contains all the portfolios.</span></p></div>
-  
-  <!-- <div class="html_content"><h4 style="line-height: normal;"><span style="font-weight:900;color:rgba(243,243,243,1);">Get In Touch</span></h4>
-    <p style="line-height: normal;"><img style="margin:0px 15px 0px 0px;" src="images/Facebook.png" />
-      <img style="margin:0px 15px 0px 0px;" src="images/Twitter.png" />
-      <img style="margin:0px 15px 0px 0px;" src="images/LinkedIn.png" /></p>
-    </div> -->
   </div>
   </div>
 
