--- a/design.html
+++ b/design.html
@@ -105,6 +105,7 @@ $(window).load(function() {
           <a href="design.html" class="ttr_menu_items_parent_link_active  dropdown-toggle" data-toggle="dropdown"><span class="menuchildicon"></span>Sys. Design</a>
         <ul class="dropdown-menu">
           <li><a href="design.html#sysarc">System Architecture</a></li> 
+          <li><a href="design.html#dialogueflow">DialogueFlow Diagram</a></li>
           <li><a href="design.html#sysdes">System Design</a></li>
           <li><a href="design.html#testknow">Test Knowledge</a></li>
           <li><a href="design.html#askq">Ask Questions</a></li>
@@ -174,8 +175,8 @@ $(window).load(function() {
     <div class="post_column col-lg-12 col-md-12 col-sm-12 col-xs-12">
     <div class="ttr_Services_html_column00">
     <div style="height:0px;width:0px;overflow:hidden;-webkit-margin-top-collapse: separate;"></div>
-    <div class="html_content"><p class="text" style="margin:0em 0em 0em 0em;text-align:Center;line-height:0.0704225352112676;font-size:1.143em;"><span style="font-family:'Roboto','Arial';font-size:2.5em;color:rgb(0, 132, 150);">System Architecture</span></p>
-       <p style="margin:0em 0em 0.48em 0em;text-align:Center;font-size:1.143em;">
+    <div class="html_content"><p class="text" style="margin:0em 0em 0em 0em;text-align:center;line-height:0.0704225352112676;font-size:1.143em;"><span style="font-family:'Roboto','Arial';font-size:2.5em;color:rgb(0, 132, 150);">System Architecture</span></p>
+       <p style="margin:0em 0em 0.48em 0em;text-align:left;font-size:1.143em;">
           <br style="font-family:'Roboto','Arial';font-size:2.143em;color:rgba(52,52,52,1);" />
           <span style="font-family:'Open Sans','Arial';font-size:1.5em;color:rgba(78,78,78,1);">The PRIDAR Chatbot application system consists of several components. Users can interact with PRIDAR Chatbot via Telegram. The bot source code is deployed to VoiceFlow. PRIDAR Chatbot is connected to Airtable and Jotform as its database, Sendgrid as its e-mail verification system and QuickChart for the data visualisation. </span>   
        </p></div>
@@ -187,6 +188,26 @@ $(window).load(function() {
     </div>
     <div class="clearfix visible-lg-block visible-sm-block visible-md-block visible-xs-block">
     </div>
+   </div>
+   <div id="dialogueflow" class="ttr_Services_html_row0 row">
+    <div class="post_column col-lg-12 col-md-12 col-sm-12 col-xs-12">
+    <div class="ttr_Services_html_column00">
+    <div style="height:0px;width:0px;overflow:hidden;-webkit-margin-top-collapse: separate;"></div>
+    <div class="html_content"><p class="text" style="margin:0em 0em 0em 0em;text-align:center;line-height:0.0704225352112676;font-size:1.143em;"><span style="font-family:'Roboto','Arial';font-size:2.5em;color:rgb(0, 132, 150);">DialogueFlow Diagram</span></p>
+       <p style="margin:0em 0em 0.48em 0em;text-align:left;font-size:1.143em;">
+          <br style="font-family:'Roboto','Arial';font-size:2.143em;color:rgba(52,52,52,1);" />
+          <span style="font-family:'Open Sans','Arial';font-size:1.5em;color:rgba(78,78,78,1);">The PRIDAR Chatbot has multiple functionalities. Therefore, it has been designed to allow users to utilize all its functionaility with ease. The dialogue flow of PRIDAR Chatbot has been purposely organised to make user interactions as smooth as possible. </span>   
+       </p></div>
+       <img src="images/Dialogflowdiagram.JPG" style="width: 100%;">
+    <p style="margin:0em 0em 0.48em 0em;text-align:right;font-size:0.43em; color:rgb(190, 190, 190);">Designed by Linta Rahman</p>
+    <div style="height:0px;width:0px;overflow:hidden;-webkit-margin-top-collapse: separate;"></div>
+    <div style="clear:both;"></div>
+    </div>
+    </div>
+    <div class="clearfix visible-lg-block visible-sm-block visible-md-block visible-xs-block">
+    </div>
+   </div>
+   
    <div id="sysdes" class="ttr_Services_html_row0 row">
    <div class="post_column col-lg-12 col-md-12 col-sm-12 col-xs-12">
    <div class="ttr_Services_html_column00">
@@ -364,7 +385,8 @@ $(window).load(function() {
 
    </div>
    </div>
-   </div></div>
+   </div>
+  </div>
    </div></div>
 </div>
 </div>
