--- a/index.html
+++ b/index.html
@@ -154,6 +154,7 @@ a.btn-primary:hover {
 
       <ul class="dropdown-menu">
         <li><a href="design.html#sysarc">System Architecture</a></li> 
+        <li><a href="design.html#dialogueflow">DialogueFlow Diagram</a></li>
         <li><a href="design.html#sysdes">System Design</a></li>
         <li><a href="design.html#testknow">Test Knowledge</a></li>
         <li><a href="design.html#askq">Ask Questions</a></li>
