--- a/testing.html
+++ b/testing.html
@@ -106,6 +106,7 @@ $(window).load(function() {
            <a href="design.html" class="ttr_menu_items_parent_link_active  dropdown-toggle" data-toggle="dropdown"><span class="menuchildicon"></span>Sys. Design</a>
          <ul class="dropdown-menu">
           <li><a href="design.html#sysarc">System Architecture</a></li> 
+          <li><a href="design.html#dialogueflow">DialogueFlow Diagram</a></li>
            <li><a href="design.html#sysdes">System Design</a></li>
            <li><a href="design.html#testknow">Test Knowledge</a></li>
            <li><a href="design.html#askq">Ask Questions</a></li>
