--- a/implementation.html
+++ b/implementation.html
@@ -503,33 +503,34 @@ $(window).load(function() {
                      td { padding-left: 30px;}
                   </style>
                   <tr class="text" style="text-align: center;">
-                     <td width="200px"><img src="images/python.png" style="width:20px; vertical-align: middle;">Function name</td>
-                     <td>Parameters</td>
-                     <td  width="450px">Functionality</td>
+                     <td width="25%"><img src="images/python.png" style="width:20px; vertical-align: middle;">Function name</td>
+                     <td  width="20%">Parameters</td>
+                     <td  width="45%">Functionality</td>
                   </tr>
                   <tr>
-                     <td>launch</td>
-                     <td>message</td>
+                     <td><a href="Documentation/docs/build/html/index.html#pridar_telegram_bot.launch" target="_blank">launch</a></td>
+                     <td style="text-align: center;">message</td>
                      <td>implements API calls to VoiceFlow for first message</td>
                   </tr>
                   <tr>
-                     <td>sendMsg</td>
-                     <td>message</td>
+                     <td><a href="Documentation/docs/build/html/index.html#pridar_telegram_bot.sendMsg" target="_blank">sendMsg</a></td>
+                     <td style="text-align: center;">message</td>
                      <td>implements API calls to VoiceFlow</td>
                   </tr>
                   <tr>
-                     <td>start</td>
-                     <td>message</td>
+                     <td><a href="Documentation/docs/build/html/index.html#pridar_telegram_bot.start" target="_blank">start</a></td>
+                     <td style="text-align: center;">message</td>
                      <td>forwards the payload extracted from the response to the user
                         (only implemented when "/start" command is received)
                      </td>
                   </tr>
                   <tr>
-                     <td>handle_message</td>
-                     <td>message</td>
+                     <td><a href="Documentation/docs/build/html/index.html#pridar_telegram_bot.handle_message" target="_blank">handle_message</a></td>
+                     <td style="text-align: center;">message</td>
                      <td>forwards the payload extracted from all responses to the user after first message</td>
                   </tr>
                </table>
+               <p><a href="Documentation/docs/build/html/index.html" target="_blank">Click here for documentation.</p>
                <p class="contentstyle">
                   <span style="font-family:'Roboto','Segoe UI';font-size:1.4em;color:rgba(78,78,78,1);">
                   <ol style="font-family:'Roboto','Segoe UI';font-size:1.4em;color:rgba(78,78,78,1);">
